refactor: centralize task validation and improve variable handling in WorkflowApplicationService